# goout-calendar

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  apiary.apib  calendarForReplyExample.html  cloudbuild.yaml  endpoints.txt  goout.apib  knativeservice.envsubst.yaml  kubernetes.envsubst.yaml  kubernetes.yaml  rustfmt.toml
resources/: index.html  script.js
src/: calendar.rs  error.rs  goout_api.rs  index.rs  main.rs  static_pages.rs
src/generation/: ical.rs  mod.rs
terraform/: .gitignore  main.tf  variables.tf
test_data/: events.json  events_empty.json  expected_aggregate.ical  expected_empty.ical  expected_nonsplit.ical  expected_split.ical
